--- a/app-frontend/Dockerfile
+++ b/app-frontend/Dockerfile
@@ -1,3 +1,7 @@
 FROM nginx:latest
 LABEL project="FriendlyEatsRG"
+
 COPY ./src /usr/share/nginx/html 
+COPY ./certs /etc/nginx/certs
+
+COPY default.conf /etc/nginx/conf.d/default.conf
