--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -1,16 +1,11 @@
 #OBS: http load balancing addon must be enabled at cluster level
-
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: ingress-main
   annotations:
-    kubernetes.io/ingress.class: "gce"
-    #kubernetes.io/ingress.allow-http: "false"
     kubernetes.io/ingress.global-static-ip-name: "my-static-ingress"
 spec:
-  # tls:
-  # - secretName: secret-tls-domain #explained in readme
   backend:
-    serviceName: front-deployment
+    serviceName: frontend-lb
     servicePort: http-port
