DVTM separated microservices restaurants / ratings

--- a/micro-ratings/Dockerfile
+++ b/micro-ratings/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.9-slim-buster
-LABEL project="micro-restaurants"
+LABEL project="micro-ratings"
 
 
 COPY ./src /app
@@ -9,6 +9,7 @@ RUN pip install -U Flask firebase-admin
 
 ENV FLASK_APP="app.py"
 ENV FLASK_ENV="development"
+ENV FLASK_DEBUG="0"
 
 ENTRYPOINT ["python"]
 CMD ["app.py"]
