--- a/kubernetes/micro-ratings.yaml
+++ b/kubernetes/micro-ratings.yaml
@@ -16,10 +16,10 @@ spec:
     spec:
       containers:
       - name: api
-        image: eu.gcr.io/dvotm-project/micro-ratings:1.0.3
+        image: eu.gcr.io/dvotm-project/micro-ratings:1.1.1
         env:
         - name: COLLECTION
-          value: "ratings"
+          value: "restaurants"
         - name: PORT
           value: "8080"
         ports:
