--- a/app-frontend/Dockerfile
+++ b/app-frontend/Dockerfile
@@ -2,3 +2,5 @@ FROM nginx:latest
 LABEL project="FriendlyEatsRG"
 
 COPY ./src /usr/share/nginx/html 
+
+COPY default.conf /etc/nginx/conf.d/default.conf
