--- a/kubernetes/frontend.yaml
+++ b/kubernetes/frontend.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: eu.gcr.io/dvotm-project/frontend:latest
+        image: eu.gcr.io/dvotm-project/frontend:1.1.2
         ports:
         - containerPort: 80
           name: http
@@ -32,7 +32,7 @@ metadata:
 spec:
   ports:
   - name: http-port
-    port: 30000
+    port: 80
     protocol: TCP
     targetPort: http
   selector:
